--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!------------------------------------------------------------------>
     </div>
     <div id="footer">
-        <p>www.VayuSoftwares.com<br>haren111990@VayuSoftwares.come VayuSoftwares Pvt Ltd</p>
+        <p>www.VayuSoftwares.com VayuSoftwares Pvt Ltd<br>haren111990@VayuSoftwares.come</p>
     </div>
 <!-- ----------------------------------------------------------------------------------------->
     <script src="watch.js"></script>
